# futures-signals-component-macro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.md  fix_code_quality.sh
.cargo/: config.toml
.github/workflows/: publish.yml  rust.yml
examples/bevy_haalka/: main.rs
src/: lib.rs
src/parse/: mod.rs  parse_field.rs
src/render/: render_component_macro.rs  render_utils.rs
tests/: test.rs
tests/build_fail_checks/: nosend.rs  nosend.stderr
